--- a/carta.html
+++ b/carta.html
@@ -7,89 +7,267 @@
 </head>
 <body>
 
-    <!-- NAVBAR -->
-    <header class="navbar">
-        <div class="logo">GAME GXN</div>
+<header class="navbar">
+    <div class="logo">GAME GXN</div>
 
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
 
-            <div class="dropdown">
-                <button class="dropbtn">Servicios ▾</button>
-                <div class="dropdown-content">
-                    <a href="alquiler.html">Alquilar PC</a>
-                    <a href="carta.html">Carta</a>
-                </div>
+        <div class="dropdown">
+            <button class="dropbtn">Servicios ▾</button>
+            <div class="dropdown-content">
+                <a href="alquiler.html">Alquilar PC</a>
+                <a href="carta.html">Carta</a>
+            </div>
+        </div>
+
+        <a href="locales.html">Horarios / Locales</a>
+        <a href="faq.html">Preguntas Frecuentes</a>
+    </nav>
+</header>
+
+<main class="contenido">
+
+    <section class="bloque-principal">
+        <h1>Carta</h1>
+        <p>Disfruta nuestros snacks y bebidas mientras juegas.</p>
+    </section>
+
+    <!-- SNACKS -->
+    <section class="seccion gaming">
+        <h2 class="categoria">Snacks</h2>
+        <div class="planes">
+
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/papas_lays.png" alt="Lays" class="producto-img">
+                <h3>Lays</h3>
+                <div class="precio">S/ 6.00</div>
+                <button class="btn btn-pedir">Pedir</button>
             </div>
 
-            <a href="locales.html">Horarios / Locales</a>
-            <a href="faq.html">Preguntas Frecuentes</a>
-        </nav>
-    </header>
-
-    <!-- CONTENIDO -->
-    <main class="contenido">
-
-        <section class="bloque-principal">
-            <h1>Carta</h1>
-            <p>Disfruta nuestros snacks y bebidas mientras juegas.</p>
-        </section>
-
-        <!-- SNACKS -->
-        <section class="seccion gaming">
-            <h2 class="categoria">Snacks</h2>
-
-            <div class="planes">
-
-                <div class="plan-card">
-                    <h3>Papas Fritas</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
-                <div class="plan-card">
-                    <h3>Nachos con Queso</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
-                <div class="plan-card">
-                    <h3>Hot Dog</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/chizitos.png" alt="Chizitos" class="producto-img">
+                <h3>Chizitos</h3>
+                <div class="precio">S/ 4.00</div>
+                <button class="btn btn-pedir">Pedir</button>
             </div>
-        </section>
 
-        <!-- BEBIDAS -->
-        <section class="seccion workstation">
-            <h2 class="categoria">Bebidas</h2>
-
-            <div class="planes">
-
-                <div class="plan-card">
-                    <h3>Gaseosa</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
-                <div class="plan-card">
-                    <h3>Energética</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
-                <div class="plan-card">
-                    <h3>Agua Mineral</h3>
-                    <div class="precio">S/ --</div>
-                </div>
-
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/cheetos.png" alt="Cheetos" class="producto-img">
+                <h3>Cheetos</h3>
+                <div class="precio">S/ 6.00</div>
+                <button class="btn btn-pedir">Pedir</button>
             </div>
-        </section>
 
-    </main>
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/doritos.png" alt="Doritos" class="producto-img">
+                <h3>Doritos</h3>
+                <div class="precio">S/ 7.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>© 2026 Game GXN - Todos los derechos reservados</p>
-    </footer>
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/jalapeno.png" alt="Inka Chips Jalapeño" class="producto-img">
+                <h3>Inka Chips Jalapeño</h3>
+                <div class="precio">S/ 8.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/bbq.png" alt="Inka Chips BBQ" class="producto-img">
+                <h3>Inka Chips BBQ</h3>
+                <div class="precio">S/ 8.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/snacks/takis.png" alt="Takis" class="producto-img">
+                <h3>Takis</h3>
+                <div class="precio">S/ 7.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- BEBIDAS -->
+    <section class="seccion workstation">
+        <h2 class="categoria">Bebidas</h2>
+        <div class="planes">
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/cielo.png" alt="Agua Cielo" class="producto-img">
+                <h3>Agua Cielo</h3>
+                <div class="precio">S/ 4.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/redbull.png" alt="Red Bull" class="producto-img">
+                <h3>Red Bull</h3>
+                <div class="precio">S/ 10.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/monster.png" alt="Monster Original" class="producto-img">
+                <h3>Monster Original</h3>
+                <div class="precio">S/ 12.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/monster_ultra.png" alt="Monster Ultra" class="producto-img">
+                <h3>Monster Ultra</h3>
+                <div class="precio">S/ 12.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/monster_mango.png" alt="Monster Mango Loco" class="producto-img">
+                <h3>Monster Mango Loco</h3>
+                <div class="precio">S/ 12.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/inkacola.png" alt="Inca Kola" class="producto-img">
+                <h3>Inca Kola</h3>
+                <div class="precio">S/ 5.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/cocacola.png" alt="Coca Cola" class="producto-img">
+                <h3>Coca-Cola</h3>
+                <div class="precio">S/ 5.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/sprite.png" alt="Sprite" class="producto-img">
+                <h3>Sprite</h3>
+                <div class="precio">S/ 5.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/fanta.png" alt="Fanta" class="producto-img">
+                <h3>Fanta</h3>
+                <div class="precio">S/ 5.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/pepsi.png" alt="Pepsi" class="producto-img">
+                <h3>Pepsi</h3>
+                <div class="precio">S/ 5.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+            <div class="plan-card">
+                <img src="imagenes/carta/bebidas/sporade.png" alt="Sporade" class="producto-img">
+                <h3>Sporade</h3>
+                <div class="precio">S/ 6.00</div>
+                <button class="btn btn-pedir">Pedir</button>
+            </div>
+
+        </div>
+    </section>
+
+</main>
+
+<!-- FOOTER EMPRESARIAL -->
+<footer class="menu-inferior">
+    <div class="footer-container">
+        <div class="footer-secciones">
+
+            <!-- Información legal -->
+            <div class="footer-seccion">
+                <h4>Legal</h4>
+                <a href="#">Términos y Condiciones</a>
+                <a href="#">Política de Privacidad</a>
+            </div>
+
+            <!-- Ayuda y soporte -->
+            <div class="footer-seccion">
+                <h4>Ayuda</h4>
+                <a href="faq.html">Preguntas Frecuentes</a>
+                <a href="carta.html">Promociones</a>
+                <a href="locales.html">Contáctanos</a>
+            </div>
+
+            <!-- Redes sociales -->
+            <div class="footer-seccion">
+                <h4>Síguenos</h4>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            </div>
+
+        </div>
+
+        <div class="footer-copy">
+            &copy; 2026 Game GXN. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
+
+<!-- MODAL PEDIDO -->
+<div id="modalPedido" class="modal">
+    <div class="modal-contenido">
+        <span class="cerrar">&times;</span>
+        <h2>Realizar Pedido</h2>
+
+        <label>Número de PC:</label>
+        <input type="number" id="pcNumero" placeholder="Ej: 12">
+
+        <label>Código de Reserva:</label>
+        <input type="text" id="codigoReserva" placeholder="Ej: GXN123">
+
+        <hr>
+
+        <label>Producto:</label>
+        <select id="productoSelect">
+            <optgroup label="Snacks">
+            <option value="6">Lay’s - S/ 6.00</option>
+            <option value="4">Chizitos - S/ 4.00</option>
+            <option value="6">Cheetos - S/ 6.00</option>
+            <option value="7">Doritos - S/ 7.00</option>
+            <option value="8">Inka Chips Jalapeño - S/ 8.00</option>
+            <option value="8">Inka Chips BBQ - S/ 8.00</option>
+            <option value="7">Takis - S/ 7.00</option>
+            </optgroup>
+            <optgroup label="Bebidas">
+            <option value="4">Agua Cielo - S/ 4.00</option>
+            <option value="10">Red Bull - S/ 10.00</option>
+            <option value="12">Monster Original - S/ 12.00</option>
+            <option value="12">Monster Ultra - S/ 12.00</option>
+            <option value="12">Monster Mango Loco - S/ 12.00</option>
+            <option value="5">Inca Kola - S/ 5.00</option>
+            <option value="5">Coca-Cola - S/ 5.00</option>
+            <option value="5">Sprite - S/ 5.00</option>
+            <option value="5">Fanta - S/ 5.00</option>
+            <option value="6">Sporade - S/ 6.00</option>
+            </optgroup>
+        </select>
+
+        <label>Cantidad:</label>
+        <input type="number" id="cantidad" value="1" min="1">
+
+        <button class="btn" id="agregarProducto">Agregar</button>
+
+        <h3>Pedido:</h3>
+        <ul id="listaPedido"></ul>
+
+        <h3>Total: S/ <span id="total">0</span></h3>
+
+        <button class="btn" id="confirmarPedido">Confirmar Pedido</button>
+    </div>
+</div>
+
+<script src="js/script_carta.js"></script>
 
 </body>
 </html>
