--- a/index.html
+++ b/index.html
@@ -32,8 +32,40 @@
     <p>El mejor centro gaming de la ciudad.</p>
 </main>
 
-<footer>
-    <p>© 2026 Game GXN - Todos los derechos reservados</p>
+<!-- FOOTER EMPRESARIAL -->
+<footer class="menu-inferior">
+    <div class="footer-container">
+        <div class="footer-secciones">
+
+            <!-- Información legal -->
+            <div class="footer-seccion">
+                <h4>Legal</h4>
+                <a href="#">Términos y Condiciones</a>
+                <a href="#">Política de Privacidad</a>
+            </div>
+
+            <!-- Ayuda y soporte -->
+            <div class="footer-seccion">
+                <h4>Ayuda</h4>
+                <a href="faq.html">Preguntas Frecuentes</a>
+                <a href="carta.html">Promociones</a>
+                <a href="locales.html">Contáctanos</a>
+            </div>
+
+            <!-- Redes sociales -->
+            <div class="footer-seccion">
+                <h4>Síguenos</h4>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+                <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            </div>
+
+        </div>
+
+        <div class="footer-copy">
+            &copy; 2026 Game GXN. Todos los derechos reservados.
+        </div>
+    </div>
 </footer>
 
 </body>
